quick copy update

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -130,7 +130,7 @@ body {
 }
 /* line 60, ../sass/screen.scss */
 .page header h2 {
-  margin-top: .5em;
+  margin-top: 1.5em;
   font-size: 1.2em;
   color: #999;
 }
