--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -58,7 +58,7 @@ body {
     }
 
     h2 {
-        margin-top: .5em;
+        margin-top: 1.5em;
         font-size: 1.2em;
         color: #999;
     }
